# mirena_sim_OBSOLETE

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
MirenaSim/: cone.json  export_presets.cfg  icon.png.import  project.godot  track.json  track1.json
MirenaSim/.godot/: extension_list.cfg  global_script_class_cache.cfg
MirenaSim/.godot/editor/: Asphalt.tres-folding-6d6036d94267f77bed613cf6b13ad8d9.cfg  SimEnv.tscn-editstate-4151677a6ba2e0cc46e1e62aa473a085.cfg  SimEnv.tscn-folding-4151677a6ba2e0cc46e1e62aa473a085.cfg  cone.tscn-folding-8376e8232cf4814156978f4db46a288b.cfg  create_recent.Node  editor_layout.cfg  filesystem_cache10  filesystem_cache8  filesystem_update4  hud.tscn-editstate-63a9f71e7f4c917ad71842584bc2f0b8.cfg  main_menu.tscn-editstate-d95bfa5151b331cb764dc8456d18826e.cfg  main_menu.tscn-folding-d95bfa5151b331cb764dc8456d18826e.cfg  mirena_car.tscn-folding-ebf917837f8c2e4e5021c1dfc1635334.cfg  mirena_hud.tscn-editstate-5d568afd7029a7a3411dc3595bfee4bd.cfg  mirena_hud.tscn-editstate-b6d72c2ba9bad2e7a800ec53283170ac.cfg  mirena_hud.tscn-folding-24370c18f312c62efff8d8c7152d1e04.cfg  mirena_hud.tscn-folding-5d568afd7029a7a3411dc3595bfee4bd.cfg  mirena_hud.tscn-folding-b6d72c2ba9bad2e7a800ec53283170ac.cfg  project_metadata.cfg  quick_open_dialog_cache.cfg  racecar.tscn-editstate-c0c2459489ff58d41d1027bdedab7335.cfg  racecar.tscn-folding-c0c2459489ff58d41d1027bdedab7335.cfg  recent_dirs  script_editor_cache.cfg
MirenaSim/.godot/imported/: BlueCone.png-310eed2ca18aa946afe0cf98b06f8a29.ctex  BlueCone.png-310eed2ca18aa946afe0cf98b06f8a29.md5  Cone.glb-b155e1df84013f340e6c7af7423b9578.md5  Cone.glb-b155e1df84013f340e6c7af7423b9578.scn  Cone_Blue.png-8fc9e99fd7efce52d379ff6b93232873.md5  Cone_Blue.png-8fc9e99fd7efce52d379ff6b93232873.s3tc.ctex  Cone_Orange.png-3793a1af791955c83eff182f1d56745c.md5  Cone_Orange.png-3793a1af791955c83eff182f1d56745c.s3tc.ctex  Cone_Yellow.png-68e9e1cce4e2d9050ba184f98a5c9976.md5  Cone_Yellow.png-68e9e1cce4e2d9050ba184f98a5c9976.s3tc.ctex  OrangeCone.png-965b32bcfbe46a60a38ff39975b559d7.md5  OrangeCone.png-965b32bcfbe46a60a38ff39975b559d7.s3tc.ctex  YellowCone.png-af492d7825bf6186f9dc7c0b4b92a19c.md5  YellowCone.png-af492d7825bf6186f9dc7c0b4b92a19c.s3tc.ctex  asphalt_0002_ao_1k.jpg-2f82f6c0954582e1f770f1d5e8e6d2c4.ctex  asphalt_0002_ao_1k.jpg-2f82f6c0954582e1f770f1d5e8e6d2c4.md5  asphalt_0002_ao_1k.jpg-2f82f6c0954582e1f770f1d5e8e6d2c4.s3tc.ctex  asphalt_0002_color_1k.jpg-c9270c9f0a9988e719358ce7d4be1a2e.md5  asphalt_0002_color_1k.jpg-c9270c9f0a9988e719358ce7d4be1a2e.s3tc.ctex  asphalt_0002_height_1k.png-a6736d43b9e52c7c345e43c6949c337b.md5  asphalt_0002_height_1k.png-a6736d43b9e52c7c345e43c6949c337b.s3tc.ctex  asphalt_0002_normal_directx_1k.png-ef3044a7c5cc17e7d36c14d976ab2602.ctex  asphalt_0002_normal_directx_1k.png-ef3044a7c5cc17e7d36c14d976ab2602.md5  asphalt_0002_normal_opengl_1k.png-b51d9c833f5219b84572bfa6ed5263d9.md5  asphalt_0002_normal_opengl_1k.png-b51d9c833f5219b84572bfa6ed5263d9.s3tc.ctex  asphalt_0002_roughness_1k.jpg-d8cf241584209dcebfb7cfd4c26020e4.md5  asphalt_0002_roughness_1k.jpg-d8cf241584209dcebfb7cfd4c26020e4.s3tc.ctex  bCone.glb-a36a03f6072aabdedeaaf193668287f5.md5  bCone.glb-a36a03f6072aabdedeaaf193668287f5.scn  bCone_BlueCone.png-9d2d9bc564bef925765d544a122b1062.md5  bCone_BlueCone.png-9d2d9bc564bef925765d544a122b1062.s3tc.ctex  car.glb-9f6cb026530d3658b8526197aa22e5ac.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.ctex  icon.png-487276ed1e3a0c39cad0279d744ee560.md5  kloofendal_48d_partly_cloudy_puresky_2k.exr-03f7d24ab81b704a5399d67c9a975b68.md5  kloofendal_48d_partly_cloudy_puresky_2k.exr-e1c942f48deae8b1f31b4320bcbf1f41.bptc.ctex  kloofendal_48d_partly_cloudy_puresky_2k.exr-e1c942f48deae8b1f31b4320bcbf1f41.md5  oCone.glb-fb9e8e0c076878750806b64b4c5c267a.md5  oCone.glb-fb9e8e0c076878750806b64b4c5c267a.scn  yCone.glb-25091964f58d466a53a88ac0d43704f2.md5  (+3 more)
MirenaSim/LibMirena/: mirena_sim.gdextension  mirena_sim.gdextension.uid
MirenaSim/Models/Car/: car.glb  car.glb.import
MirenaSim/Models/Cone/: Cone.blend  Cone.blend.import  Cone.blend1  Cone.glb  Cone.glb.import  Cone_Blue.png.import  Cone_Orange.png.import  Cone_Yellow.png.import  bCone.glb.import  bCone_BlueCone.png.import  oCone.glb.import  oCone_OrangeCone.png.import  yCone.glb.import  yCone_YellowCone.png.import
MirenaSim/Scenes/: SimEnv.tscn  sim_env.gd
MirenaSim/Scenes/cone/: cone.tscn
MirenaSim/Scenes/cones/: cone.gd  cone.gd.uid  cone.tscn
MirenaSim/Scenes/sim/: SimEnv.tscn  debug_layer.gd  sim_env.gd  sim_env.gd.uid
MirenaSim/Scenes/vehicle/: car_options_menu.gd  car_options_menu.gd.uid  car_state_broadcaster.gd  car_state_broadcaster.gd.uid  controls_label.gd  controls_label.gd.uid  vehicleMotion.gd  vehicleMotion.gd.uid
MirenaSim/Scripts/: Debug.gd  Debug.gd.uid  coord.gd  coord.gd.uid  genTrack.gd  genTrack.gd.uid  track.gd  track.gd.uid  track_manager.gd
MirenaSim/Scripts/singletons/: mirena_logger.gd  mirena_logger.gd.uid  sim.gd  sim.gd.uid
MirenaSim/Scripts/static/: preset_loader.gd  preset_loader.gd.uid
MirenaSim/Textures/Asphalt/: Asphalt.tres  asphalt_0002_ao_1k.jpg.import  asphalt_0002_color_1k.jpg.import  asphalt_0002_height_1k.png.import  asphalt_0002_normal_directx_1k.png.import  asphalt_0002_normal_opengl_1k.png.import  (+1 more)
MirenaSim/addons/: kloofendal_48d_partly_cloudy_puresky_2k.exr.import
launch/: mirena_sim_launch.py
scripts/: launch_sim.sh
src/: cframe_helpers.hpp  custom_macros.hpp  mirena_cam.cpp  mirena_cam.hpp  mirena_car.cpp  mirena_car.hpp  mirena_gps.cpp  mirena_gps.hpp  mirena_imu.cpp  mirena_imu.hpp  mirena_lidar.cpp  mirena_lidar.hpp  register_types.cpp  register_types.h  ros_node.cpp  ros_node.hpp  ros_node3d.cpp  ros_node3d.hpp  ros_time.cpp
src/node/: mirena_cam.hpp  mirena_car.hpp  mirena_gps.cpp  mirena_gps.hpp  mirena_imu.cpp  mirena_imu.hpp  mirena_lidar.cpp  mirena_lidar.hpp  mirena_ros_pubsub.hpp  ros_node3d.cpp  ros_node3d.hpp  ros_time.cpp  ros_time.hpp
src/ros_bridge/: ros_bridge.hpp
src/utility/: ros_conversions.cpp  ros_conversions.hpp
(+97 files in other folders)
